# elastic_ner_api

./: README.md  pyproject.toml
elastic_ner_api/fp/: Either.py  Maybe.py  __init__.py
elastic_ner_api/fp/types/: applicative.py  functor.py  monad.py  monoid.py  semigroup.py
tests/: test_either.py  test_lambda.py  test_maybe.py  test_semigroup.py  test_try.py  test_typed_lambda.py
